// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator with one page renders correctly 1`] = `""`;

exports[`Paginator with three pages on the first page renders correctly 1`] = `
<footer>
  <ul
    css={
      Object {
        "display": "block",
        "li": Object {
          "a": Object {
            "backgroundImage": "none",
          },
          "display": "inline-block",
          "marginBottom": 0,
          "marginRight": "1rem",
        },
        "listStyleType": "none",
        "margin": 0,
      }
    }
  >
    <li>
      «
    </li>
    <li>
      ‹
    </li>
    <li
      key="paginate-0"
    >
      1
    </li>
    <li
      key="paginate-1"
    >
      <Link
        href="/page/2"
      >
        2
      </Link>
    </li>
    <li
      key="paginate-2"
    >
      <Link
        href="/page/3"
      >
        3
      </Link>
    </li>
    <li>
      <Link
        href="/page/2"
      >
        ›
      </Link>
    </li>
    <li>
      <Link
        href="/page/3"
      >
        »
      </Link>
    </li>
  </ul>
</footer>
`;

exports[`Paginator with three pages on the last page renders correctly 1`] = `
<footer>
  <ul
    css={
      Object {
        "display": "block",
        "li": Object {
          "a": Object {
            "backgroundImage": "none",
          },
          "display": "inline-block",
          "marginBottom": 0,
          "marginRight": "1rem",
        },
        "listStyleType": "none",
        "margin": 0,
      }
    }
  >
    <li>
      <Link
        href="/"
      >
        «
      </Link>
    </li>
    <li>
      <Link
        href="/page/2"
      >
        ‹
      </Link>
    </li>
    <li
      key="paginate-0"
    >
      <Link
        href="/"
      >
        1
      </Link>
    </li>
    <li
      key="paginate-1"
    >
      <Link
        href="/page/2"
      >
        2
      </Link>
    </li>
    <li
      key="paginate-2"
    >
      3
    </li>
    <li>
      ›
    </li>
    <li>
      »
    </li>
  </ul>
</footer>
`;
